2009-06-05  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-home-view.c (hd_home_view_applet_release): Prepare for
	NULL return value from hd_home_view_container_get_next/previous_view.
	Fixes: NB#120248 - observed a hildon-desktop crash. Also, cut some
	overlong lines...

	Fix inline functions to actually be inlined.

	* src/main.c (hd_mb_wm): Global MBWindowManager pointer for the
	inlined functions.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_init): Initialise hd_mb_wm here.
	(hd_comp_mgr_get_current_screen_width,
	hd_comp_mgr_get_current_screen_height,
	hd_comp_mgr_client_is_maximized): Moved to hd-comp-mgr.h.
	* src/mb/Makefile.am: Use libmb.la instead of libmb.a similarly to
	other subdirectories (home, launcher,...).

2009-06-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#116272 ROTATION: Incoming call dialog does not rotate
		  if not on the home view

	Recognize PORTRAIT_MODE_REQUEST=2 as a demand for switching,
	whether other clients are comfortable with it or not.

	* src/home/hd-render-manager.c (hd_render_manager_clip_geo):
	  Respect the screen's right and bottom boundaries as well.
	  Visibility checking after rotation has been broken for a
	  few weeks because now we don't reconfigure windows that
	  are completely covered by other windows.  As a result now
	  we may have 800x480 geometries on a 480x800 screen.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_property_changed,
	    hd_comp_mgr_client_init, hd_comp_mgr_should_be_portrait):
	  Understand REQUEST=2.

2009-06-04  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#120722 - Scaled background image shows dark lines at edges
	* src/tidy/tidy-blur-group.c
	* src/tidy/tidy-cached-group.c: Modified pixel offset for rendering,
	  so bottom/right edges of the background were rendered correctly.

	* src/util/hd-transition.c: Modify timings in app_close transition
	  to allow more time for sparkles, and to shrink their size over
	  time.